frontend/tests/cases/positive/interfaces/syntax/synConstraintNatCoeffectParameter.gr
interface Simple a (b : Nat)

-- A constraint with an application to a nat coeffect
foo : forall {a : Type} . {Simple a 1} => a -> a
foo x = x
